Fix registration + add require to composer.json

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -60,7 +60,7 @@
               </div>
               <div class="signup-form">
                 <div class="message">If you want to post applications you need to register</div>
-                <a class="button signup" href="{{ path('fos_user_registration_register') }}">Sign up</a>
+                <a class="button signup" href="{{ path('pp_user_register') }}">Sign up</a>
               </div>
             </div>
             <div class="terms">
