--- a/src/PP/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/PP/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -2,7 +2,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 <div class="demand-list">
-    <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
+    <form action="{{ path('pp_user_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
 
         {{ form_errors(form.name) }}
         {{ form_row(form.name) }}
@@ -19,7 +19,6 @@
         <div>
             <input type="submit" value="{{ 'registration.submit'|trans }}" />
         </div>
-
 
     </form>
 </div>
